Bug 272619 - Unnamed actions in Configure Toolbars dialog
Summary: Unnamed actions in Configure Toolbars dialog
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-06 14:10 UTC by Burkhard Lück
Modified: 2013-03-19 21:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2011-05-06 14:10:45 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The Configure Toolbars dialog has 4 available actions without name.
Moving them in their order (no1..no4) to Current actions adds these lines to share/apps/kgpg/keysmanager.rc:

 <ActionProperties scheme="Default">
  <Action iconText="no1" name="default"/>
  <Action iconText="no2" name="key_delsign"/>
  <Action iconText="no3" name="key_importsign"/>
  <Action iconText="no4" name="key_delete"/>
 </ActionProperties>

"default" stays unnamed forever, for "key_delsign", "key_importsign" and "key_delete" the text of the action is set in the context menus. 
Without opening these context menus first the actions are unnamed.

Reproducible: Always
Comment 1 Rolf Eike Beer 2011-06-02 17:46:17 UTC
SVN commit 1234835 by dakon:

fix some actions showing up for toolbars not having a text

CCBUG:272619

 M  +12 -10    keysmanager.cpp  
 M  +12 -0     keytreeview.cpp  
 M  +2 -0      keytreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1234835
Comment 2 Rolf Eike Beer 2011-06-02 17:58:09 UTC
SVN commit 1234838 by dakon:

fix some actions showing up for toolbars not having a text

BUG:272619

backport of r1234835 from trunk


 M  +12 -10    keysmanager.cpp  
 M  +12 -0     keytreeview.cpp  
 M  +2 -0      keytreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1234838