fix some actions showing up for toolbars not having a text

BUG:272619

backport of r1234835 from trunk

svn path=/branches/KDE/4.6/kdeutils/kgpg/; revision=1234838